02. Compilation and Packaging Adding registry to demonstrate how it cna be used together with ServiceLoader and to demonstrate multi-step annotations processing. Adding comments how to inspect compilation to bytecode.
06. Memory Management
Adding forgotten dependency.